--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "fs-extra": "^11.2.0",
-    "rollup": "^4.6.1"
+    "rollup": "^4.6.1",
+    "tapable": "^2.2.1"
   }
 }
