--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,22 @@
 {
   "extends": "lavy/tsconfig.base.json",
   "compilerOptions": {
-    "target": "ESNEXT",
-    "module": "commonjs",
-    "outDir": "dist",
-    "rootDir": "./",
+    "target": "ES2020",
+    "module": "CommonJS",
     "baseUrl": "./",
+    "outDir": "./dist",
+    "rootDir": "./src",
     "paths": {
       "@/*": ["src/*"]
     },
-    "esModuleInterop": true
+    // "declarationDir": "./types"
     // "outFile": "./",
     // "allowJs": true,
     // "checkJs": true,
     // "jsx": "react-jsxdev",
     // "declaration": false,
-    // "declarationMap": false,
-    // "sourceMap": false,
+    "declarationMap": false,
+    "sourceMap": false
     // "downlevelIteration": true ,
     // "importHelpers": true,
     // "lib": [],
@@ -24,6 +24,6 @@
     // "typeRoots": [],
     // "types": [],
   },
-  // "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/node_modules/*"]
 }
