--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "swiftlet",
-  "version": "1.0.0-Alpha.1",
+  "version": "1.0.0-Alpha.2",
   "description": "Web dev build tool",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -11,7 +11,7 @@
     "dev": "npx ts-node ./src/index.ts",
     "build:es": "rm -rf ./dist/* && rm -rf ./types/* && npx tsc",
     "build": "rimraf dist && pnpm tsc",
-    "dev2": "pnpm build --watch",
+    "dev:watch": "pnpm build --watch",
     "format": "prettier --write . && npx eslint src --ext .js,.ts",
     "test": "jest"
   },
@@ -50,11 +50,12 @@
   "dependencies": {
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "chalk": "^5.3.0",
+    "chalk": "4",
     "commander": "^11.1.0",
     "fs-extra": "^11.2.0",
     "rollup": "^4.6.1",
     "rollup-plugin-dts": "^6.1.0",
-    "tapable": "^2.2.1"
+    "tapable": "^2.2.1",
+    "ts-copilot": "1.0.0-Beta"
   }
 }
